Justify .toolbar .left, stopping jumping when size changes

--- a/src/css/toolbar.styl
+++ b/src/css/toolbar.styl
@@ -41,6 +41,7 @@ popup-transition = 0.2s ease-out
       line-height: toolbar-height;
       flex: 1 0 25%;
       display: flex;
+      justify-content: flex-end;
     }
 
     .center {
